<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context="com.damia.blackboxmed.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <LinearLayout
            android:id="@+id/main_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="4dp">

            <LinearLayout
                android:id="@+id/title_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_card"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/title_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:text="@string/title_share"
                    android:textAlignment="textStart"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/doctor_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_card"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/doc_card_title"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="Name"
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:text="Doc McDoctor"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="Phone"
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:text="+363492893847"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="Email"
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:text="doctorsemail@gmail.com"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/type_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_card"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/data_types_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_plus"
                    android:gravity="center_vertical"
                    android:text="@string/type_card_title"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/background_tag"
                        android:drawableLeft="@drawable/ic_tag"
                        android:drawablePadding="8dp"
                        android:padding="4dp"
                        android:text="Pulse"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/background_tag"
                        android:drawableLeft="@drawable/ic_tag"
                        android:drawablePadding="8dp"
                        android:padding="4dp"
                        android:text="SO2"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/background_tag"
                        android:drawableLeft="@drawable/ic_tag"
                        android:drawablePadding="8dp"
                        android:padding="4dp"
                        android:text="Steps"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />
                </GridLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/services_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_card"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/devices_card_title"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2">

                    <TextView
                        android:id="@+id/apple_watch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="0.7"
                        android:text="Apple HealthKit"
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/switch_apple"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="0.3"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/samsung_gear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="0.7"
                        android:text="Google Fit"
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/switch_gear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="0.3"
                        android:textSize="18sp" />

                </GridLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/range_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_card"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/frequency_card_title"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="Start: "
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner_start"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:background="@drawable/background_details"
                        android:popupBackground="@color/colorPrimaryDarkless" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="End: "
                        android:textColor="@color/colorPrimaryDarker"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner_end"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:background="@drawable/background_details"
                        android:popupBackground="@color/colorPrimaryDarkless" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/frequency_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_card"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="0.6"
                        android:text="Send data: "
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_upload"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:background="@drawable/background_details"
                        android:popupBackground="@color/colorPrimaryDarkless"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
